FACULDADE/ISEP/2_ANO/2_SEMESTRE/sem4pi-2024-2025-sem4pi_2024_2025_g13-1/base.integrations.plugins.dsl/src/main/java/eapli/shodrone/integrations/plugins/dsl/figure/figureParser.java
package eapli.shodrone.integrations.plugins.dsl.figure;// Generated from C:/Users/maria/Progama�ao/Teste_Branch/base.integrations.plugins.dsl/lprog/us251/figure.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class figureParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DSL=1, VERSION=2, SEMICOLON=3, DRONETYPE=4, POSITION=5, VELOCITY=6, EQUAL=7, 
		LPAREN=8, RPAREN=9, PI=10, PLUS=11, MINUS=12, MULTIPLICATION=13, DIVISION=14, 
		DISTANCE=15, LINE=16, RECTANGLE=17, CIRCLE=18, CIRCUNFERENCE=19, LIGHTSON=20, 
		MOVE=21, ROTATE=22, LIGHTSOFF=23, MOVEPOS=24, YELLOW=25, RED=26, GREEN=27, 
		GROUP=28, ENDGROUP=29, PAUSE=30, BEFORE=31, ENDBEFORE=32, AFTER=33, ENDAFTER=34, 
		POINT=35, COMMA=36, ID=37, DIGIT=38, NEWLINE=39, WS=40, UNKNOWN=41;
	public static final int
		RULE_start = 0, RULE_versionDecl = 1, RULE_versionNumber = 2, RULE_droneTypeDecl = 3, 
		RULE_drone = 4, RULE_id = 5, RULE_statement = 6, RULE_positionDecl = 7, 
		RULE_velocityDecl = 8, RULE_expression = 9, RULE_term = 10, RULE_distanceDecl = 11, 
		RULE_figureDecl = 12, RULE_actionStmt = 13, RULE_color = 14, RULE_coordinate = 15, 
		RULE_groupStmt = 16, RULE_pauseStmt = 17, RULE_beforeStmt = 18, RULE_afterStmt = 19, 
		RULE_signal = 20, RULE_operation = 21, RULE_number = 22, RULE_float = 23, 
		RULE_int = 24;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "versionDecl", "versionNumber", "droneTypeDecl", "drone", "id", 
			"statement", "positionDecl", "velocityDecl", "expression", "term", "distanceDecl", 
			"figureDecl", "actionStmt", "color", "coordinate", "groupStmt", "pauseStmt", 
			"beforeStmt", "afterStmt", "signal", "operation", "number", "float", 
			"int"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DSL'", "'version'", "';'", "'DroneType'", "'Position'", "'Velocity'", 
			"'='", "'('", "')'", "'PI'", "'+'", "'-'", "'*'", "'/'", "'Distance'", 
			"'Line'", "'Rectangle'", "'Circle'", "'Circumference'", "'lightsOn'", 
			"'move'", "'rotate'", "'lightsOff'", "'movePos'", "'YELLOW'", "'RED'", 
			"'GREEN'", "'group'", "'endgroup'", "'pause'", "'before'", "'endbefore'", 
			"'after'", "'endafter'", "'.'", "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DSL", "VERSION", "SEMICOLON", "DRONETYPE", "POSITION", "VELOCITY", 
			"EQUAL", "LPAREN", "RPAREN", "PI", "PLUS", "MINUS", "MULTIPLICATION", 
			"DIVISION", "DISTANCE", "LINE", "RECTANGLE", "CIRCLE", "CIRCUNFERENCE", 
			"LIGHTSON", "MOVE", "ROTATE", "LIGHTSOFF", "MOVEPOS", "YELLOW", "RED", 
			"GREEN", "GROUP", "ENDGROUP", "PAUSE", "BEFORE", "ENDBEFORE", "AFTER", 
			"ENDAFTER", "POINT", "COMMA", "ID", "DIGIT", "NEWLINE", "WS", "UNKNOWN"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "figure.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public figureParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StartContext extends ParserRuleContext {
		public VersionDeclContext versionDecl() {
			return getRuleContext(VersionDeclContext.class,0);
		}
		public DroneTypeDeclContext droneTypeDecl() {
			return getRuleContext(DroneTypeDeclContext.class,0);
		}
		public TerminalNode EOF() { return getToken(figureParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(figureParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(figureParser.NEWLINE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor) return ((figureVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			versionDecl();
			setState(52); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(51);
				match(NEWLINE);
				}
				}
				setState(54); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(56);
			droneTypeDecl();
			setState(58); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(57);
				match(NEWLINE);
				}
				}
				setState(60); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1249031192672L) != 0)) {
				{
				{
				setState(62);
				statement();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VersionDeclContext extends ParserRuleContext {
		public TerminalNode DSL() { return getToken(figureParser.DSL, 0); }
		public List<TerminalNode> WS() { return getTokens(figureParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(figureParser.WS, i);
		}
		public TerminalNode VERSION() { return getToken(figureParser.VERSION, 0); }
		public VersionNumberContext versionNumber() {
			return getRuleContext(VersionNumberContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(figureParser.SEMICOLON, 0); }
		public VersionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_versionDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor ) return ((figureVisitor<? extends T>)visitor).visitVersionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionDeclContext versionDecl() throws RecognitionException {
		VersionDeclContext _localctx = new VersionDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_versionDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(DSL);
			setState(71);
			match(WS);
			setState(72);
			match(VERSION);
			setState(73);
			match(WS);
			setState(74);
			versionNumber();
			setState(75);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VersionNumberContext extends ParserRuleContext {
		public List<IntContext> int_() {
			return getRuleContexts(IntContext.class);
		}
		public IntContext int_(int i) {
			return getRuleContext(IntContext.class,i);
		}
		public List<TerminalNode> POINT() { return getTokens(figureParser.POINT); }
		public TerminalNode POINT(int i) {
			return getToken(figureParser.POINT, i);
		}
		public VersionNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_versionNumber; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor ) return ((figureVisitor<? extends T>)visitor).visitVersionNumber(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VersionNumberContext versionNumber() throws RecognitionException {
		VersionNumberContext _localctx = new VersionNumberContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_versionNumber);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			int_();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==POINT) {
				{
				setState(78);
				match(POINT);
				setState(79);
				int_();
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==POINT) {
					{
					setState(80);
					match(POINT);
					setState(81);
					int_();
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DroneTypeDeclContext extends ParserRuleContext {
		public DroneContext drone() {
			return getRuleContext(DroneContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(figureParser.SEMICOLON, 0); }
		public DroneTypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_droneTypeDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor ) return ((figureVisitor<? extends T>)visitor).visitDroneTypeDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DroneTypeDeclContext droneTypeDecl() throws RecognitionException {
		DroneTypeDeclContext _localctx = new DroneTypeDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_droneTypeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			drone();
			setState(87);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DroneContext extends ParserRuleContext {
		public TerminalNode DRONETYPE() { return getToken(figureParser.DRONETYPE, 0); }
		public TerminalNode WS() { return getToken(figureParser.WS, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public DroneContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drone; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor ) return ((figureVisitor<? extends T>)visitor).visitDrone(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DroneContext drone() throws RecognitionException {
		DroneContext _localctx = new DroneContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_drone);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(DRONETYPE);
			setState(90);
			match(WS);
			setState(91);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(figureParser.ID, 0); }
		public IdContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_id; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor ) return ((figureVisitor<? extends T>)visitor).visitId(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdContext id() throws RecognitionException {
		IdContext _localctx = new IdContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_id);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public PositionDeclContext positionDecl() {
			return getRuleContext(PositionDeclContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(figureParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(figureParser.NEWLINE, i);
		}
		public VelocityDeclContext velocityDecl() {
			return getRuleContext(VelocityDeclContext.class,0);
		}
		public DistanceDeclContext distanceDecl() {
			return getRuleContext(DistanceDeclContext.class,0);
		}
		public FigureDeclContext figureDecl() {
			return getRuleContext(FigureDeclContext.class,0);
		}
		public ActionStmtContext actionStmt() {
			return getRuleContext(ActionStmtContext.class,0);
		}
		public GroupStmtContext groupStmt() {
			return getRuleContext(GroupStmtContext.class,0);
		}
		public PauseStmtContext pauseStmt() {
			return getRuleContext(PauseStmtContext.class,0);
		}
		public BeforeStmtContext beforeStmt() {
			return getRuleContext(BeforeStmtContext.class,0);
		}
		public AfterStmtContext afterStmt() {
			return getRuleContext(AfterStmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor ) return ((figureVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		int _la;
		try {
			setState(150);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				positionDecl();
				setState(97); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(96);
					match(NEWLINE);
					}
					}
					setState(99); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				velocityDecl();
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(102);
					match(NEWLINE);
					}
					}
					setState(105); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				distanceDecl();
				setState(109); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(108);
					match(NEWLINE);
					}
					}
					setState(111); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				figureDecl();
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(114);
					match(NEWLINE);
					}
					}
					setState(117); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(119);
				actionStmt();
				setState(121); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(120);
					match(NEWLINE);
					}
					}
					setState(123); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(125);
				groupStmt();
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(126);
					match(NEWLINE);
					}
					}
					setState(129); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(131);
				pauseStmt();
				setState(133); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(132);
					match(NEWLINE);
					}
					}
					setState(135); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(137);
				beforeStmt();
				setState(139); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(138);
					match(NEWLINE);
					}
					}
					setState(141); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NEWLINE );
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(143);
				afterStmt();
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(144);
					match(NEWLINE);
					}
					}
					setState(149);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PositionDeclContext extends ParserRuleContext {
		public TerminalNode POSITION() { return getToken(figureParser.POSITION, 0); }
		public List<TerminalNode> WS() { return getTokens(figureParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(figureParser.WS, i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(figureParser.EQUAL, 0); }
		public CoordinateContext coordinate() {
			return getRuleContext(CoordinateContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(figureParser.SEMICOLON, 0); }
		public PositionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_positionDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor ) return ((figureVisitor<? extends T>)visitor).visitPositionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PositionDeclContext positionDecl() throws RecognitionException {
		PositionDeclContext _localctx = new PositionDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_positionDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			match(POSITION);
			setState(153);
			match(WS);
			setState(154);
			id();
			setState(155);
			match(WS);
			setState(156);
			match(EQUAL);
			setState(157);
			match(WS);
			setState(158);
			coordinate();
			setState(159);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VelocityDeclContext extends ParserRuleContext {
		public TerminalNode VELOCITY() { return getToken(figureParser.VELOCITY, 0); }
		public List<TerminalNode> WS() { return getTokens(figureParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(figureParser.WS, i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(figureParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(figureParser.SEMICOLON, 0); }
		public VelocityDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_velocityDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor ) return ((figureVisitor<? extends T>)visitor).visitVelocityDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VelocityDeclContext velocityDecl() throws RecognitionException {
		VelocityDeclContext _localctx = new VelocityDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_velocityDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(VELOCITY);
			setState(162);
			match(WS);
			setState(163);
			id();
			setState(164);
			match(WS);
			setState(165);
			match(EQUAL);
			setState(166);
			match(WS);
			setState(167);
			expression();
			setState(168);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<OperationContext> operation() {
			return getRuleContexts(OperationContext.class);
		}
		public OperationContext operation(int i) {
			return getRuleContext(OperationContext.class,i);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor ) return ((figureVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			term();
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30720L) != 0)) {
				{
				{
				setState(171);
				operation();
				setState(172);
				term();
				}
				}
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public SignalContext signal() {
			return getRuleContext(SignalContext.class,0);
		}
		public TerminalNode PI() { return getToken(figureParser.PI, 0); }
		public TerminalNode LPAREN() { return getToken(figureParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(figureParser.RPAREN, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor ) return ((figureVisitor<? extends T>)visitor).visitTerm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_term);
		try {
			setState(188);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(179);
				number();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(180);
				signal();
				setState(181);
				match(PI);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(183);
				match(LPAREN);
				setState(184);
				expression();
				setState(185);
				match(RPAREN);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(187);
				id();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DistanceDeclContext extends ParserRuleContext {
		public TerminalNode DISTANCE() { return getToken(figureParser.DISTANCE, 0); }
		public List<TerminalNode> WS() { return getTokens(figureParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(figureParser.WS, i);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode EQUAL() { return getToken(figureParser.EQUAL, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(figureParser.SEMICOLON, 0); }
		public DistanceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_distanceDecl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof figureVisitor ) return ((figureVisitor<? extends T>)visitor).visitDistanceDecl(this);
			else return visitor.visitChildren(this);
		}
	}
